Fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -297,10 +297,16 @@ footer {
 
   .left {
     float:left;
+    clear: both;
   }
 
   .right {
     float: right;
+    clear: both;
+  }
+
+  .price {
+    clear: both;
   }
 
 }
